[tool.poetry]
name = "arc-to-sqlite"
version = "0.1.1"
description = ""
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
sqlite-utils = "^3.36"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
freezegun = "^1.4.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^8.0.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
pytest-mypy = "^0.10.3"
ruff = "^0.4.3"

[tool.poetry.group.datasette.dependencies]
datasette = "^0.64.6"
datasette-cluster-map = "^0.18.1"
datasette-dashboards = "^0.6.2"
datasette-leaflet = "^0.2.2"

[tool.poetry.scripts]
arc-to-sqlite = "arc_to_sqlite.cli:cli"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
