[tool.poetry]
name = "arc-to-sqlite"
version = "0.2.0"
description = ""
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
shapely = "^2.0.4"
sqlite-utils = "^3.37"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
bpython = "^0.24"
coverage = "^7.5.4"
freezegun = "^1.5.1"
isort = "^5.13.2"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-mypy = "^0.10.3"
ruff = "^0.6.1"
types-shapely = "^2.0.0.20240618"

[tool.poetry.group.datasette.dependencies]
datasette = "^0.65"
datasette-cluster-map = "^0.18.2"
datasette-dashboards = "^0.6.2"
datasette-ics = "^0.5.2"
datasette-leaflet = "^0.2.2"

[tool.poetry.scripts]
arc-to-sqlite = "arc_to_sqlite.cli:cli"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
